test/sema/methods/method_value_receiver_wrong_type.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
struct S {
  x: number

  // CHECK: [[# @LINE + 1 ]]:10: error: 'self' can only have '&Self' or '&mut Self' types
  fn foo(self: number) {}
  
  // CHECK: [[# @LINE + 1 ]]:10: error: 'self' can only have '&Self' or '&mut Self' types
  fn bar(self: &number) {}
}

fn main() {}
